# rust-csv-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  build.rs  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  simple-test.py
.circleci/: config.yml
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  reader.rst
examples/: reader_from_file_object.py  reader_from_path.py
rustcsv/: __init__.py  __main__.py  error.py  test_benchmark.py  test_fastcsv.py  test_instancewrapper.py  test_rustcsv.py
src/: file_like_reader.rs  instance.rs  lib.rs  py_file.rs  reader.rs  record.rs  util.rs  writer.rs
travis/: _output_helpers.sh  build-wheels-manylinux.sh  build-wheels-osx.sh  build-wheels-osx_before-build.sh  build-wheels.sh  deploy-osx.sh  deploy.sh  install-rust.sh  utils.sh
