[package]
name = "rustcsv"
version = "0.1.0"
authors = ["Joar Wandborg <joar@wandborg.se>"]
build = "build.rs"

[build-dependencies]
built = "^0.3"

[dependencies]
built = "^0.3"
csv = "1"
log = "*"
env_logger = "*"
tempfile = "3"

[dependencies.pyo3]
features = ["extension-module"]
path = "pyo3"

[profile.release]
lto = true

[lib]
name = "rustcsv"
crate-type = ["cdylib"]
